--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,10 @@ a {
     color: #212121;
 }
 
+.header_link:hover {
+    transform: scale(1.1)
+}
+
 .cart_button:hover {
     transform: scale(1.2);
     transition-duration: 0.5s;
