--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,7 @@ a {
 }
 
 .header_link:hover {
-    transform: scale(1.1)
+    transform: scale(1.1);
     transition-duration: 0.5s;
 }
 
@@ -796,7 +796,7 @@ a {
         font-size: 25px;
     }
     .section_title_delivery_smaller {
-        font-size: 20;
+        font-size: 20px;
     }
     .main_links {
         display: none;
